# python-template-research

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
