[build-system]
requires = ["poetry_core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "app"  # TODO
version = "0.1.0"  # TODO
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3.0"
coverage = "^6.3.2"
flake8-isort = "^4.1.1"
isort = "^5.10.1"
pep8-naming = "~0.12.1"
pytest-cov = "^3.0"
pytest-flake8 = "^1.1"
pytest-mypy = "~0.9.1"
jupyter = "^1.0.0"
ipykernel = "^6.15.2"
nbautoexport = "^0.5.0"
jupyterlab = "^3.4.6"
flake8 = "4.0.1"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
py_version = 38
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=app --flake8 --mypy"
